<resources>
    <string name="app_name">bank</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_cards">My Cards</string>
    <string name="transfer">Transfer</string>
    <string name="name">Full name</string>
    <string name="code">کد ملی</string>
    <string name="father__name">Father name</string>
    <string name="phone_number">Phone number</string>
    <string name="post_code">Post code</string>
    <string name="gender">Gender</string>
    <string name="woman">female</string>
    <string name="man">male</string>
    <string name="regester">Register</string>
    <string name="edit">Edit info</string>
    <string name="logout">Add new person</string>
    <string name="my_balance">My Balance</string>
    <string name="balance">Balance</string>
    <string name="create">Create</string>
</resources>