<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bakground"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="268dp"
            android:layout_height="160dp"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            app:shapeAppearanceOverlay="@style/Rounded"
            app:srcCompat="@drawable/img" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="25sp"
            android:layout_marginBottom="16dp"
            app:cardCornerRadius="20dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/light_blue"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/myTextInputLayoutName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    android:layout_marginHorizontal="16dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/my_editTextName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/light_blue"
                        android:hint="@string/name"
                        android:inputType="textAutoCorrect|textPersonName"
                        android:singleLine="true"
                        android:textColor="@color/white" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/myTextInputLayoutCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    android:layout_marginHorizontal="16dp"
                    android:inputType="number">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/my_editTextBirth"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/light_blue"
                        android:hint="@string/father__name"
                        android:inputType="textPersonName"
                        android:singleLine="true"
                        android:textColor="@color/white" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/myTextInputLayoutPost"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    android:layout_marginHorizontal="16dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/my_editTextPost"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/light_blue"
                        android:hint="@string/post_code"
                        android:inputType="numberSigned|number"
                        android:singleLine="true"
                        android:textColor="@color/white" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/myTextInputLayout1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="25sp"
                    android:layout_marginHorizontal="16dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/my_editText1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/light_blue"
                        android:hint="@string/phone_number"
                        android:inputType="phone"
                        android:singleLine="true"
                        android:textColor="@color/white" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/regester"
            android:backgroundTint="#FF8600"
            android:layout_gravity="center"
            android:paddingHorizontal="30sp"
            android:paddingVertical="12dp"
            android:layout_marginTop="15dp"
            app:cornerRadius="50sp"
            />

    </LinearLayout>
</ScrollView>
